changed port to 2005

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -7,6 +7,11 @@
     <title>Move 30</title>
 </head>
 <body>
-    
+    <h1>Hello World</h1>  
+    <form action="/new" method="POST">
+    <label for="firstName">First Name</label>
+    <input type="text" name="firstName">
+    <button type="submit">Submit</button>
+    </form> 
 </body>
 </html>
