--- a/views/layouts/main-layout.pug
+++ b/views/layouts/main-layout.pug
@@ -4,7 +4,7 @@ html
     meta(http-equiv='X-UA-Compatible' content='IE=edge')
     meta(name='viewport' content='width=device-width, initial-scale=1.0')
     title Move 30 
-    //- title tag, Move 30 is the content
+    link(rel='stylesheet' href='/css/style.css')
   body 
-  h1 testing that this partial works!!!
+  p testing that this partial works!!!
 block content
