added nav bar in main-layout

--- a/views/layouts/main-layout.pug
+++ b/views/layouts/main-layout.pug
@@ -6,5 +6,13 @@ html
     title Move 30 
     link(rel='stylesheet' href='/css/style.css')
   body 
-  p testing that this partial works!!!
+    nav
+        h2 Move 30
+        ul
+          li
+            a(href='#') About
+          li
+            a(href='#') Login
+          li
+            a(href='#') Sign Up
 block content
