--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,10 +1,7 @@
-h1 {
-    color: red;
-}
 * {
   padding: 0;
   margin: 0;
-  font-family: Arial, Tahoma, Serif;
+  font-family: 'Nunito', sans-serif;
 }
 
 body {
@@ -47,4 +44,27 @@ nav a {
     nav * {
         align-self: center;
     }
+}
+
+.main {
+    /* border: 1px solid red; */
+    /* height: 100vh; */
+    display: flex;
+}
+
+.main-child {
+    flex: 1;
+    padding-top: 2rem;
+    border: 2px solid purple;
+}
+
+.main-child:first-child {
+    margin-right: 20px;
+}
+
+/* yoga pic on homepage */
+.yoga {
+    object-fit: contain;
+    width: 35rem;
+    margin-left: 7rem;
 }
