about page is  linked in the nav bar woohoo

--- a/views/layouts/main-layout.pug
+++ b/views/layouts/main-layout.pug
@@ -10,10 +10,12 @@ html
     link(rel='stylesheet' href='/css/style.css')
   body 
     nav
-        h2 Move 30
+        h2 
+          a(href='/') Move 30
+          //- takes user back to homepage
         ul
           li
-            a(href='#') About
+            a(href='/about') About
           li
             a(href='#') Login
           li
