--- a/views/index.pug
+++ b/views/index.pug
@@ -6,8 +6,8 @@ block content
     .main-child.left
       img.yoga(src='/imgs/yoga-home.jpg')
     .main-child.right
-      h1 This is where the login and sign up modal will be
-
+      h1 Move 30
+      p A community to encourage eachother to get in at least 30 minutes of movement a day for both our physical and mental well being.
   //-my form
   //- form(action='/new' method='POST')
   //-   label(for='firstName') First Name
