--- a/views/layouts/main-layout.pug
+++ b/views/layouts/main-layout.pug
@@ -17,7 +17,7 @@ html
           li
             a(href='/about') About
           li
-            a(href='#') Login
+            a(href='/profile') Login
           li
             a(href='#') Sign Up
 block content
