linked profile, login, and signup pages on the homepage woo

--- a/views/index.pug
+++ b/views/index.pug
@@ -6,5 +6,9 @@ block content
     .main-child.left
       img.yoga(src='/imgs/yoga-home.jpg')
     .main-child.right
+      <section>  
+           
       
+      </section>
+
 
