--- a/views/index.ejs
+++ b/views/index.ejs
@@ -9,11 +9,12 @@
 
 </head>
 <body>
-    <h1>Hello World</h1>  
-    <form action="/newUser" method="POST">
-    <label for="firstName">First Name</label>
-    <input type="text" name="firstName">
-    <button type="submit">Submit</button>
+    <form action="/login" method="POST">
+        <label for="email">Email:</label>
+        <input type="text" name="email" placeholder="Example: yourEmail@yahoo.com">
+        <label for="password">Password:</label>
+        <input type="text" name="password" placeholder="">
+        <button type="submit">Submit</button>
     </form> 
 </body>
 
