--- a/views/index.pug
+++ b/views/index.pug
@@ -6,9 +6,7 @@ block content
     .main-child.left
       img.yoga(src='/imgs/yoga-home.jpg')
     .main-child.right
-      <section>  
-           
-      
-      </section>
+      h1 What is Move 30?
+      p Move 30 is a community centered around physical and mental wellness. We encourage eachother to introduce movement into our daily lives, for at least 30 minutes a day. I will most likely get rid of this since I can just explain the about in the index page.
 
 
