--- a/views/login.pug
+++ b/views/login.pug
@@ -2,4 +2,10 @@ extends layouts/main-layout.pug
 
 block content
     h1 Login
-        p this is the login page
+    <form action="/login" method="POST">
+        <label for="email">Email:</label>
+        <input type="text" name="email" placeholder="">
+        <label for="password">Password:</label>
+        <input type="text" name="password" placeholder="">
+        <button type="submit">Submit</button>
+    </form> 
