--- a/views/signup.pug
+++ b/views/signup.pug
@@ -2,4 +2,12 @@ extends layouts/main-layout.pug
 
 block content
     h1 Signup
-        p this is the sign up page
+    <form action="/signup" method="POST">
+        <label for="email">Email:</label>
+        <input type="text" name="email" placeholder="">
+        <label for="password">Password:</label>
+        <input type="text" name="password" placeholder="">
+        <label for="password">Confirm Password:</label>
+        <input type="text" name="confirmPassword" placeholder="">
+        <button type="submit">Submit</button>
+    </form> 
