--- a/views/profile.pug
+++ b/views/profile.pug
@@ -6,7 +6,7 @@ block content
           <form action ="/new" enctype="multipart/form-data" method="post">
             <div>
                <label for="caption">Caption</label>
-               <textarea class="form-control" id="caption" name="caption" placeholder="Write about yourr 30 minutes of movement here..."></textarea>
+               <textarea class="form-control" id="caption" name="caption" placeholder="Write about your 30 minutes of movement here..."></textarea>
             </div>
             <div>
               <label for="imgUpload" class="form-label">Share a pic</label>
