--- a/views/signup.pug
+++ b/views/signup.pug
@@ -2,7 +2,7 @@ extends layouts/main-layout.pug
 
 block content
     h1 Signup
-    <form action="/signup" method="POST">
+    <form action="/auth/signup" method="POST">
         <label for="email">Email:</label>
         <input type="text" name="email" placeholder="">
         <label for="password">Password:</label>
