--- a/views/login.pug
+++ b/views/login.pug
@@ -4,8 +4,8 @@ block content
     h1 Login
     <form action="/login" method="POST">
         <label for="email">Email:</label>
-        <input type="text" name="email" placeholder="">
+        <input type="text" id="email" name="email" placeholder="">
         <label for="password">Password:</label>
-        <input type="text" name="password" placeholder="">
+        <input type="text" id="password" name="password" placeholder="">
         <button type="submit">Submit</button>
     </form> 
