--- a/views/signup.pug
+++ b/views/signup.pug
@@ -4,10 +4,10 @@ block content
     h1 Signup
     <form action="/auth/signup" method="POST">
         <label for="email">Email:</label>
-        <input type="text" name="email" placeholder="">
+        <input type="text" id="email" name="email" placeholder="">
         <label for="password">Password:</label>
-        <input type="text" name="password" placeholder="">
-        <label for="password">Confirm Password:</label>
-        <input type="text" name="confirmPassword" placeholder="">
+        <input type="text" id="password" name="password" placeholder="">
+        //- <label for="password">Confirm Password:</label>
+        //- <input type="text" name="confirmPassword" placeholder="">
         <button type="submit">Submit</button>
     </form> 
