--- a/views/signup.pug
+++ b/views/signup.pug
@@ -7,7 +7,7 @@ block content
         <input type="text" id="email" name="email" placeholder="">
         <label for="password">Password:</label>
         <input type="text" id="password" name="password" placeholder="">
-        //- <label for="password">Confirm Password:</label>
-        //- <input type="text" name="confirmPassword" placeholder="">
+        <label for="password">Confirm Password:</label>
+        <input type="text" name="confirmPassword" placeholder="">
         <button type="submit">Submit</button>
     </form> 
