--- a/views/login.pug
+++ b/views/login.pug
@@ -2,7 +2,7 @@ extends layouts/main-layout.pug
 
 block content
     h1 Login
-    <form action="/login" method="POST">
+    <form action="/auth/login" method="POST">
         <label for="email">Email:</label>
         <input type="text" id="email" name="email" placeholder="">
         <label for="password">Password:</label>
