--- a/views/login.pug
+++ b/views/login.pug
@@ -1,11 +1,10 @@
 extends layouts/main-layout.pug 
 
 block content
-    h1 Login
-    <form action="/auth/login" method="POST">
-        <label for="email">Email:</label>
-        <input type="text" id="email" name="email" placeholder="">
-        <label for="password">Password:</label>
-        <input type="text" id="password" name="password" placeholder="">
-        <button type="submit">Submit</button>
-    </form> 
+	h1 Login
+	form(action='/auth/login' method='POST')
+		label(for='email') Email:
+		input#email(type='text' name='email' placeholder='')
+		label(for='password') Password:
+		input#password(type='text' name='password' placeholder='')
+		button(type='submit') Submit
