--- a/views/signup.pug
+++ b/views/signup.pug
@@ -1,13 +1,12 @@
 extends layouts/main-layout.pug 
 
 block content
-    h1 Signup
-    <form action="/auth/signup" method="POST">
-        <label for="email">Email:</label>
-        <input type="text" id="email" name="email" placeholder="">
-        <label for="password">Password:</label>
-        <input type="text" id="password" name="password" placeholder="">
-        <label for="password">Confirm Password:</label>
-        <input type="text" name="confirmPassword" placeholder="">
-        <button type="submit">Submit</button>
-    </form> 
+	h1 Signup
+	form(action='/auth/signup' method='POST')
+		label(for='email') Email:
+		input#email(type='text' name='email' placeholder='')
+		label(for='password') Password:
+		input#password(type='text' name='password' placeholder='')
+		label(for='password') Confirm Password:
+		input(type='text' name='confirmPassword' placeholder='')
+		button(type='submit') Submit
