--- a/views/login.pug
+++ b/views/login.pug
@@ -6,5 +6,5 @@ block content
 		label(for='email') Email:
 		input#email(type='text' name='email' placeholder='')
 		label(for='password') Password:
-		input#password(type='text' name='password' placeholder='')
+		input#password(type='password' name='password' placeholder='')
 		button(type='submit') Submit
