--- a/views/signup.pug
+++ b/views/signup.pug
@@ -6,7 +6,7 @@ block content
 		label(for='email') Email:
 		input#email(type='text' name='email' placeholder='')
 		label(for='password') Password:
-		input#password(type='text' name='password' placeholder='')
+		input#password(type='password' name='password' placeholder='')
 		label(for='password') Confirm Password:
-		input(type='text' name='confirmPassword' placeholder='')
+		input(type='password' name='confirmPassword' placeholder='')
 		button(type='submit') Submit
