--- a/views/index.pug
+++ b/views/index.pug
@@ -2,11 +2,8 @@ extends layouts/main-layout.pug
 //- this acts like a partial
 
 block content
-	.main
-		.main-child.left
-			img.yoga(src='/imgs/yoga-home.jpg')
-		.main-child.right
-			h1 What is Move 30?
-			p Move 30 is a community centered around physical and mental wellness. We encourage eachother to introduce movement into our daily lives, for at least 30 minutes a day. I will most likely get rid of this since I can just explain the about in the index page.
+	.container
+		h1 What is Move 30?
+		p Move 30 is a community centered around physical and mental wellness. We encourage eachother to introduce movement into our daily lives, for at least 30minutes a day. I will most likely get rid of this since I can just explain the about in the index page.
 
 
