--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,64 +1,83 @@
 * {
-  padding: 0;
-  margin: 0;
   font-family: "Nunito", sans-serif;
+  box-sizing: border-box;
 }
 
 body {
   color: #263238;
+  padding: 0;
+  margin: 0;
 }
 
-/* nav bar */
-nav {
+/* navbar styling */
+.navbar {
   display: flex;
   justify-content: space-between;
-  padding: 1rem 2rem;
+  align-items: center;
+  background-color: black;
+  color: white;
 }
 
-nav ul {
+.brand-title {
+  font-size: 1.5rem;
+  margin: 0.5rem;
+}
+
+.brand-title a {
+  text-decoration: none;
+  color: white;
+}
+
+.brand-title:hover {
+  background-color: #555;
+}
+
+.navbar-links ul {
+  margin: 0;
+  padding: 0;
   display: flex;
+}
+
+.navbar-links li {
   list-style: none;
 }
 
-nav li {
-  padding-left: 1rem;
-}
-
-nav a {
+.navbar-links li a {
   text-decoration: none;
-  color: black;
+  color: white;
+  padding: 1rem;
+  display: block;
 }
 
-/* nav bar media queries */
-@media only screen and (max-width: 600px) {
-  nav {
-    flex-direction: column;
-    margin: 0 auto;
-  }
-  nav ul {
-    flex-direction: column;
-    padding-top: 0.5rem;
-  }
-  nav li {
-    padding: 0.5rem 0;
-  }
-  nav * {
-    align-self: center;
-  }
+/* hover animations on navbar links */
+.navbar-links li:hover {
+  background-color: #555;
 }
 
-/* info area */
-.container {
-  display: flex;
+/* toggle button */
+.toggle-button {
+  position: absolute;
+  top: 0.75rem;
+  right: 1rem;
+  display: none;
   flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  border: 1px solid purple;
+  justify-content: space-between;
+  width: 30px;
+  height: 21px;
 }
 
-.container p {
-  padding: 1rem 3rem 0 3rem;
-  text-align: center;
+.toggle-button .bar {
+  height: 3px;
+  width: 100%;
+  background-color: white;
+  border-radius: 10px;
 }
 
-/* need to center the paragraph for mobile view */
+@media (max-width: 425px) {
+  .toggle-button {
+    display: flex;
+  }
+  .navbar-links {
+    display: none;
+  }
+}
