--- a/public/css/style.css
+++ b/public/css/style.css
@@ -73,11 +73,31 @@ body {
   border-radius: 10px;
 }
 
+/* hamburger nav */
 @media (max-width: 425px) {
   .toggle-button {
     display: flex;
   }
   .navbar-links {
     display: none;
+    width: 100%;
+  }
+  .navbar {
+    flex-direction: column;
+    align-items: flex-start;
+  }
+
+  .navbar-links ul {
+    flex-direction: column;
+    width: 100%;
+  }
+  .navbar-links li {
+    text-align: center;
+  }
+  .navbar-links li a {
+    padding: 0.5rem 1rem;
+  }
+  .navbar-links.active {
+    display: flex;
   }
 }
