--- a/views/layouts/main-layout.pug
+++ b/views/layouts/main-layout.pug
@@ -8,6 +8,7 @@ html
 		link(rel='preconnect' href='https://fonts.gstatic.com' crossorigin='')
 		link(href='https://fonts.googleapis.com/css2?family=Nunito:wght@300;400;700&display=swap' rel='stylesheet')
 		link(rel='stylesheet' href='/css/style.css')
+		script(src='../js/main.js' type='text/javascript')
 	body 
 		nav(class='navbar')
 			div(class='brand-title')
@@ -24,16 +25,4 @@ html
 						a(href='/auth/login') Login
 					li
 						a(href='/auth/signup') Signup
-		//- nav
-		//- 		a(href='/') Move 30
-		//- 			//- takes user back to homepage
-		//- 		ul
-		//- 			li
-		//- 				a(href='/profile') Profile
-		//- 				//- renders the profile page
-		//- 			li
-		//- 				a(href='/auth/login') Login
-		//- 				//- renders the login page
-		//- 			li
-		//- 				a(href='/auth/signup') Sign Up
-block content
+	block content
