--- a/views/layouts/main-layout.pug
+++ b/views/layouts/main-layout.pug
@@ -8,7 +8,7 @@ html
 		link(rel='preconnect' href='https://fonts.gstatic.com' crossorigin='')
 		link(href='https://fonts.googleapis.com/css2?family=Nunito:wght@300;400;700&display=swap' rel='stylesheet')
 		link(rel='stylesheet' href='/css/style.css')
-		script(src='../js/main.js' type='text/javascript')
+		script(defer, src='../js/main.js' type='text/javascript')
 	body 
 		nav(class='navbar')
 			div(class='brand-title')
@@ -25,4 +25,4 @@ html
 						a(href='/auth/login') Login
 					li
 						a(href='/auth/signup') Signup
-	block content
+		block content
