rchanged the redirect in the auth middleware to redirect a user who is not signed in to the login page

--- a/views/index.pug
+++ b/views/index.pug
@@ -4,6 +4,6 @@ extends layouts/main-layout.pug
 block content
 	.container
 		h1 What is Move 30?
-		p Move 30 is a community centered around physical and mental wellness. We encourage eachother to introduce movement into our daily lives, for at least 30 minutes a day. I will most likely get rid of this since I can just explain the about in the index page.
+		p Move 30 is a community centered around physical and mental wellness. We encourage eachother to introduce movement into our daily lives, for at least 30 minutes a day.
 
 
