--- a/public/css/style.css
+++ b/public/css/style.css
@@ -14,8 +14,8 @@ body {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  background-color: black;
-  color: white;
+  background-color: white;
+  color: #7209b7;
 }
 
 .brand-title {
@@ -25,12 +25,18 @@ body {
 
 .brand-title a {
   text-decoration: none;
+  color: #7209b7;
+  font-weight: bold;
+}
+
+.brand-title a:hover {
+  background-color: #7209b7;
   color: white;
 }
 
-.brand-title:hover {
-  background-color: #555;
-}
+/* .brand-title a:hover {
+  color: white;
+} */
 
 .navbar-links ul {
   margin: 0;
@@ -44,14 +50,16 @@ body {
 
 .navbar-links li a {
   text-decoration: none;
-  color: white;
+  color: #7209b7;
   padding: 1rem;
   display: block;
+  font-weight: bold;
 }
 
 /* hover animations on navbar links */
-.navbar-links li:hover {
-  background-color: #555;
+.navbar-links li a:hover {
+  background-color: #7209b7;
+  color: white;
 }
 
 /* toggle button */
@@ -69,7 +77,7 @@ body {
 .toggle-button .bar {
   height: 3px;
   width: 100%;
-  background-color: white;
+  background-color: #7209b7;
   border-radius: 10px;
 }
 
