added image to homepage for mobile, and added login and create account links to account pages

--- a/views/login.pug
+++ b/views/login.pug
@@ -8,3 +8,4 @@ block content
 		label(for='password') Password:
 		input#password(type='password' name='password' placeholder='')
 		button(type='submit') Submit
+	a(href='/auth/signup') Create an Account
