--- a/views/signup.pug
+++ b/views/signup.pug
@@ -10,3 +10,4 @@ block content
 		label(for='password') Confirm Password:
 		input(type='password' name='confirmPassword' placeholder='')
 		button(type='submit') Submit
+	a(href='/auth/login') Login
