--- a/public/css/style.css
+++ b/public/css/style.css
@@ -113,3 +113,21 @@ body {
 .container * {
   text-align: center;
 }
+
+/* Login Page */
+.loginHeading {
+  text-align: center;
+}
+
+.loginForm {
+  width: 200px;
+  padding: 20px;
+}
+
+input[type="text"],
+input[type="password"] {
+  padding: 10px;
+  margin: 10px 0;
+  border-radius: 10px;
+  /* box-shadow: 0 0 15px 4px rgba(0, 0, 0, 0.06); */
+}
