--- a/views/login.pug
+++ b/views/login.pug
@@ -8,4 +8,4 @@ block content
 		label(for='password') Password:
 		input#password(type='password' name='password' placeholder='Password')
 		button(type='submit') Submit
-	a(href='/auth/signup') Create an Account
+	a(class='createAccountButton' href='/auth/signup') Create an Account
