--- a/public/css/style.css
+++ b/public/css/style.css
@@ -110,8 +110,11 @@ body {
   }
 }
 
-.container * {
-  text-align: center;
+.container {
+  display: flex;
+  flex-direction: column;
+  /* justify-content: center; */
+  align-items: center;
 }
 
 /* Login and Signup Pages */
