centered homepage on mobile as well, added padding of 5 rem to left and rright of homepage container

--- a/views/index.pug
+++ b/views/index.pug
@@ -5,6 +5,6 @@ block content
 	.container
 		img(src='https://placedog.net/500')
 		h1 What is Move 30?
-		p Move 30 is a community centered around physical and mental wellness. We encourage eachother to introduce movement into our daily lives, for at least 30 minutes a day.
+		p Move 30 is a community centered around physical and mental wellness. We encourage eachother to introduce movement into our daily lives, for at least 30 minutes a day. Feel free to share pictures and stories about your daily activities. 
 
 
