--- a/public/css/style.css
+++ b/public/css/style.css
@@ -110,11 +110,17 @@ body {
   }
 }
 
+/* div on the homepage containing an image and info about the site */
 .container {
   display: flex;
   flex-direction: column;
   /* justify-content: center; */
   align-items: center;
+}
+
+.container p {
+  padding-left: 5rem;
+  padding-right: 5rem;
 }
 
 /* Login and Signup Pages */
